// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupTile snapshots (T4) no photo / dark 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "aspectRatio": 1,
      "backgroundColor": "#2E241A",
      "borderColor": "rgba(226,196,141,.16)",
      "borderRadius": 10,
      "borderWidth": 1,
      "flex": 1,
      "justifyContent": "space-between",
      "opacity": 1,
      "overflow": "hidden",
      "padding": 14,
    }
  }
>
  <View
    style={
      {
        "gap": 2,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      maxFontSizeMultiplier={1.3}
      numberOfLines={3}
      style={
        [
          {
            "color": "#FFF8E7",
            "fontFamily": "Cormorant_700Bold_Italic",
            "fontSize": 21,
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textTransform": "uppercase",
          },
          undefined,
        ]
      }
    >
      Track Club
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Geist_400Regular",
            "fontSize": 12.5,
          },
          {
            "color": "#B28D62",
          },
          undefined,
        ]
      }
    >
      muted
    </Text>
  </View>
  <Text
    style={
      [
        {
          "alignSelf": "flex-end",
          "fontFamily": "GeistMono_500Medium",
          "fontSize": 13,
        },
        {
          "color": "#E2C48D",
        },
        undefined,
      ]
    }
  >
    Daily
  </Text>
</View>
`;

exports[`GroupTile snapshots (T4) no photo / light 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "aspectRatio": 1,
      "backgroundColor": "#FFFFFF",
      "borderColor": "rgba(58,44,26,.12)",
      "borderRadius": 10,
      "borderWidth": 1,
      "flex": 1,
      "justifyContent": "space-between",
      "opacity": 1,
      "overflow": "hidden",
      "padding": 14,
    }
  }
>
  <View
    style={
      {
        "gap": 2,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      maxFontSizeMultiplier={1.3}
      numberOfLines={3}
      style={
        [
          {
            "color": "#3A2C1A",
            "fontFamily": "Cormorant_700Bold_Italic",
            "fontSize": 21,
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textTransform": "uppercase",
          },
          undefined,
        ]
      }
    >
      Track Club
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Geist_400Regular",
            "fontSize": 12.5,
          },
          {
            "color": "#7A5F43",
          },
          undefined,
        ]
      }
    >
      muted
    </Text>
  </View>
  <Text
    style={
      [
        {
          "alignSelf": "flex-end",
          "fontFamily": "GeistMono_500Medium",
          "fontSize": 13,
        },
        {
          "color": "#7A5F43",
        },
        undefined,
      ]
    }
  >
    Daily
  </Text>
</View>
`;

exports[`GroupTile snapshots (T4) photo / dark 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "aspectRatio": 1,
      "backgroundColor": "#211A12",
      "borderColor": "rgba(226,196,141,.16)",
      "borderRadius": 10,
      "borderWidth": 0,
      "flex": 1,
      "justifyContent": "space-between",
      "opacity": 1,
      "overflow": "hidden",
      "padding": 14,
    }
  }
>
  <Image
    onError={[Function]}
    resizeMode="cover"
    source={
      {
        "headers": {
          "Authorization": "Bearer tok",
        },
        "uri": "http://test/groups/g1/photo?v=1788264000000",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 10,
        },
      ]
    }
  />
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        3675919374,
        1461326862,
        437916686,
      ]
    }
    locations={
      [
        0,
        0.52,
        1,
      ]
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 10,
        },
      ]
    }
  />
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        2820281358,
        1712985102,
        1709070,
      ]
    }
    endPoint={
      [
        0.5,
        0,
      ]
    }
    locations={
      [
        0,
        0.3,
        0.55,
      ]
    }
    startPoint={
      [
        0.5,
        1,
      ]
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 10,
        },
      ]
    }
  />
  <View
    style={
      {
        "gap": 2,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      maxFontSizeMultiplier={1.3}
      numberOfLines={3}
      style={
        [
          {
            "color": "#FFF8E7",
            "fontFamily": "Cormorant_700Bold_Italic",
            "fontSize": 21,
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textTransform": "uppercase",
          },
          {
            "textShadowColor": "rgba(0,0,0,.45)",
            "textShadowOffset": {
              "height": 1,
              "width": 0,
            },
            "textShadowRadius": 4,
          },
        ]
      }
    >
      Track Club
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Geist_400Regular",
            "fontSize": 12.5,
          },
          {
            "color": "#E2C48D",
          },
          {
            "textShadowColor": "rgba(0,0,0,.45)",
            "textShadowOffset": {
              "height": 1,
              "width": 0,
            },
            "textShadowRadius": 4,
          },
        ]
      }
    >
      call ended 4 minutes ago
    </Text>
  </View>
  <Text
    style={
      [
        {
          "alignSelf": "flex-end",
          "fontFamily": "GeistMono_500Medium",
          "fontSize": 13,
        },
        {
          "color": "#FFF8E7",
        },
        {
          "textShadowColor": "rgba(0,0,0,.45)",
          "textShadowOffset": {
            "height": 1,
            "width": 0,
          },
          "textShadowRadius": 4,
        },
      ]
    }
  >
    Daily
  </Text>
</View>
`;

exports[`GroupTile snapshots (T4) photo / light 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "aspectRatio": 1,
      "backgroundColor": "#FFF8E7",
      "borderColor": "rgba(58,44,26,.12)",
      "borderRadius": 10,
      "borderWidth": 0,
      "flex": 1,
      "justifyContent": "space-between",
      "opacity": 1,
      "overflow": "hidden",
      "padding": 14,
    }
  }
>
  <Image
    onError={[Function]}
    resizeMode="cover"
    source={
      {
        "headers": {
          "Authorization": "Bearer tok",
        },
        "uri": "http://test/groups/g1/photo?v=1788264000000",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 10,
        },
      ]
    }
  />
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        3675919374,
        1461326862,
        437916686,
      ]
    }
    locations={
      [
        0,
        0.52,
        1,
      ]
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 10,
        },
      ]
    }
  />
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        2820281358,
        1712985102,
        1709070,
      ]
    }
    endPoint={
      [
        0.5,
        0,
      ]
    }
    locations={
      [
        0,
        0.3,
        0.55,
      ]
    }
    startPoint={
      [
        0.5,
        1,
      ]
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 10,
        },
      ]
    }
  />
  <View
    style={
      {
        "gap": 2,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      maxFontSizeMultiplier={1.3}
      numberOfLines={3}
      style={
        [
          {
            "color": "#FFF8E7",
            "fontFamily": "Cormorant_700Bold_Italic",
            "fontSize": 21,
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textTransform": "uppercase",
          },
          {
            "textShadowColor": "rgba(0,0,0,.45)",
            "textShadowOffset": {
              "height": 1,
              "width": 0,
            },
            "textShadowRadius": 4,
          },
        ]
      }
    >
      Track Club
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Geist_400Regular",
            "fontSize": 12.5,
          },
          {
            "color": "#E2C48D",
          },
          {
            "textShadowColor": "rgba(0,0,0,.45)",
            "textShadowOffset": {
              "height": 1,
              "width": 0,
            },
            "textShadowRadius": 4,
          },
        ]
      }
    >
      call ended 4 minutes ago
    </Text>
  </View>
  <Text
    style={
      [
        {
          "alignSelf": "flex-end",
          "fontFamily": "GeistMono_500Medium",
          "fontSize": 13,
        },
        {
          "color": "#FFF8E7",
        },
        {
          "textShadowColor": "rgba(0,0,0,.45)",
          "textShadowOffset": {
            "height": 1,
            "width": 0,
          },
          "textShadowRadius": 4,
        },
      ]
    }
  >
    Daily
  </Text>
</View>
`;
